--- a/JenkinsFile
+++ b/JenkinsFile
@@ -7,6 +7,8 @@ pipeline {
         stage ('terraform plan') {
        steps {
            sh "terraform -v"
+           sh "terraform init"
+           sh "terraform plan"
        } 
     }
     }
