--- a/JenkinsFile
+++ b/JenkinsFile
@@ -3,10 +3,13 @@ pipeline {
      tools {
       terraform "Terraform1.0.0"
       }
+    environment {
+         AWS_ACCESS_KEY_ID     = credentials('test_user-aws-secret-key-id')
+         AWS_SECRET_ACCESS_KEY = credentials('test_user-aws-secret-access-key')
+    }
     stages {
         stage ('terraform plan') {
        steps {
-         withAWS(credentials: 'test-user', region: 'us-east-1')
            sh "terraform -v"
            sh "terraform init"
            sh "terraform plan"
