--- a/JenkinsFile
+++ b/JenkinsFile
@@ -3,16 +3,18 @@ pipeline {
      tools {
       terraform "Terraform1.0.0"
       }
-    environment {
-         AWS_ACCESS_KEY_ID     = credentials('test_user-aws-secret-key-id')
-         AWS_SECRET_ACCESS_KEY = credentials('test_user-aws-secret-access-key')
-    }
     stages {
         stage ('terraform plan') {
-       steps {
-           sh "terraform -v"
-           sh "terraform init"
-           sh "terraform plan"
+        steps {
+           withCredentials([[
+             credentialsId: "test_user",
+             accessKeyVariable: 'AWS_ACCESS_KEY_ID',
+             secretKeyVariable: 'AWS_SECRET_ACCESS_KEY'
+             ]]) {
+                sh "terraform -v"
+                sh "terraform init"
+                sh "terraform plan"
+                }
        } 
     }
     }
