--- a/JenkinsFile
+++ b/JenkinsFile
@@ -7,6 +7,7 @@ pipeline {
         stage ('terraform plan') {
         steps {
            withCredentials([[
+             $class: 'AmazonWebServicesCredentialsBinding',
              credentialsId: "test_user",
              accessKeyVariable: 'AWS_ACCESS_KEY_ID',
              secretKeyVariable: 'AWS_SECRET_ACCESS_KEY'
