--- a/JenkinsFile
+++ b/JenkinsFile
@@ -15,7 +15,7 @@ pipeline {
                 sh "terraform -v"
                 sh "terraform init"
                 sh "terraform plan"
-                sh "terraform apply"
+                sh "terraform apply --auto-approve"
                 }
        } 
     }
