--- a/JenkinsFile
+++ b/JenkinsFile
@@ -8,7 +8,7 @@ pipeline {
         steps {
            withCredentials([[
              $class: 'AmazonWebServicesCredentialsBinding',
-             credentialsId: "test_user",
+             credentialsId: "awscreds",
              accessKeyVariable: 'AWS_ACCESS_KEY_ID',
              secretKeyVariable: 'AWS_SECRET_ACCESS_KEY'
              ]]) {
